# recall-stones

./: .gitignore  Cargo.toml  build_wasm.sh  index.html  recall-stones-2f363970a4a7f293.js  recall-stones-313000f34309fd2d.js  recall-stones-37f78d7d10c19f41.js  recall-stones-4393af2e81aa84d6.js  recall-stones-6a990e80611399ab.js  recall-stones-6e2a9d41fe297939.js  recall-stones-9225fe85b6576f18.js  recall-stones-93483313dfc019ae.js  recall-stones-ac41593727c069fa.js  recall-stones-b8044312aef281ee.js  recall-stones-bce114d68224d293.js  recall-stones-cb93f6feb095354e.js  recall-stones-d64145e41ccdcea0.js  recall-stones-e8867ac9c07e9e9.js  recall-stones-ec351798f7c3fbc4.js  recall-stones-ed9a49ab981a2e45.js  recall-stones-f7784a23868df581.js  recall-stones.d.ts  recall-stones.js  recall-stones_bg.wasm.d.ts
.cargo/: config
.github/workflows/: deploy-page.yml  droid.yml  release.yml  rust.yml
memory/: Cargo.toml
memory/src/: components.rs  lib.rs  menu.rs  tween.rs
memory/src/player/: mod.rs
memory/src/resources/: assets.rs  deck.rs  mod.rs  options.rs
memory/src/systems/: turn.rs  uncover.rs
menu-plugin/: Cargo.toml
menu-plugin/src/: action.rs  lib.rs  materials.rs
paper-plugin/: Cargo.toml
paper-plugin/src/: bounds.rs  components.rs  events.rs  lib.rs  tween.rs
paper-plugin/src/components/: coordinates.rs  mod.rs
paper-plugin/src/player/: mod.rs
paper-plugin/src/resources/: assets.rs  board.rs  board_assets.rs  board_options.rs  card.rs  collection.rs  deck.rs  mod.rs  options.rs
paper-plugin/src/systems/: input.rs  mod.rs  spawn.rs  turn.rs  uncover.rs
resources/web/: styles.css
src/: buttons.rs  main.rs  xp.rs
src/menu/: action.rs  materials.rs  mod.rs
