[package]
name = "recall-stones"
version = "0.1.0"
authors = ["Shaik Azhar Madar <azarmadr@pm.me>"]
edition = "2021"

[features]
default = []
debug = ["menu-plugin/debug","memory/debug", "bevy-inspector-egui"]


[dependencies]
# bevy = { git = "https://github.com/bevyengine/bevy", rev = "b697e73c3d861c209152ccfb140ae00fbc6e9925", features = ["dynamic"] }
enum_dispatch = "0.3"
autodefault = "2.0.0"
memory = { path = "memory"}
menu-plugin = {path = "menu-plugin"}

# Hierarchy inspector debug
[dependencies.bevy-inspector-egui]
version = "0.10"
optional = true

[dependencies.bevy]
version = "0.7"
default-features = false
features = [
  "bevy_render",        # Rendering framework core
  "bevy_core_pipeline", # Higher-level rendering abstractions
  "bevy_text",          # Text/font rendering
  "bevy_ui",            # UI toolkit
  "bevy_winit",
  "png",
]

# Dependencies for native only.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies.bevy]
version = "0.7"
default-features = false
features = ["x11"]

[workspace]
members = [
  "memory",
  "menu-plugin",
  #"paper-plugin/mat"
]

# Enable optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Maybe also enable only a small amount of optimization for our code:
[profile.dev]
opt-level = 1

[profile.release]
strip = "debuginfo"
lto = "thin"

[[example]]
crate-type = ["cdylib"]
name = "android"
path = "src/main.rs"

[package.metadata.android]
build_targets = [ "armv7-linux-androideabi", "aarch64-linux-android", "i686-linux-android", "x86_64-linux-android" ]
resources = "assets/android-res"
assets = "assets"
apk_name = "Recall Stones"

[package.metadata.android.sdk]
min_sdk_version = 16
target_sdk_version = 29
max_sdk_version = 29

[[package.metadata.android.uses_feature]]
name = "android.hardware.vulkan.level"
required = true
version = 1

[package.metadata.android.application]
debuggable = false
theme = "@android:style/Theme.DeviceDefault.NoActionBar.Fullscreen"
icon = "@mipmap/ic_launcher"
label = "Recall Stones"
