[package]
name = "recall-stones"
version = "0.5.0"
authors = ["Shaik Azhar Madar <azarmadr@pm.me>"]
edition = "2021"

[features]
default = []
debug = ["menu-plugin/debug","memory/debug", "bevy-inspector-egui"]


[dependencies]
# bevy = { git = "https://github.com/bevyengine/bevy", rev = "b697e73c3d861c209152ccfb140ae00fbc6e9925", features = ["dynamic"] }
enum_dispatch = "0.3"
autodefault = "2.0.0"
memory = { path = "memory"}
menu-plugin = {git = "https://github.com/azarmadr/bevy-ui-menu-plugin.git"}

# Hierarchy inspector debug
[dependencies.bevy-inspector-egui]
version = "0.12"
optional = true

[dependencies.bevy]
version = "0.8"
default-features = false
features = [
  "bevy_render",        # Rendering framework core
  "bevy_core_pipeline", # Higher-level rendering abstractions
  "bevy_text",          # Text/font rendering
  "bevy_ui",            # UI toolkit
  "bevy_winit",
  "png",
]

# Dependencies for native only.
[target.'cfg(target_os = "linux")'.dependencies.bevy]
version = "0.8"
default-features = false
features = ["dynamic","x11"]

# Dependencies for WASM only.
[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = "0.3"

[workspace]
members = [
  "memory",
]
resolver = "2"

# Enable optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Maybe also enable only a small amount of optimization for our code:
[profile.dev]
opt-level = 1

[profile.release]
strip = "debuginfo"
lto = "thin"

[[example]]
name = "xp"
path = "src/xp.rs"

[[example]]
crate-type = ["lib", "cdylib"]
name = "android"
path = "src/main.rs"

[package.metadata.android]
build_targets = [ "armv7-linux-androideabi", "aarch64-linux-android", "i686-linux-android", "x86_64-linux-android" ]
resources = "assets/android-res"
assets = "assets"
apk_name = "Recall Stones"

[package.metadata.android.sdk]
target_sdk_version = 29
min_sdk_version = 16

[package.metadata.android.application]
debuggable = false
theme = "@android:style/Theme.DeviceDefault.NoActionBar.Fullscreen"
icon = "@mipmap/ic_launcher"
label = "Recall Stones"
