[package]
name = "memory"
version = "0.1.0"
authors = ["Shaik Azhar Madar <azarmadr@pm.me>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
debug = ["bevy-inspector-egui"]

[dependencies]
serde = "1.0"
rand = "0.8"
autodefault = "2.0.0"
duplicate = "0.4"
enum_dispatch = "0.3"
bevy_tweening = "0.5"
menu-plugin = {path = "../menu-plugin"}
#mat = {path = "mat"}

# Hierarchy inspector debug
[dependencies.bevy-inspector-egui]
version = "0.12"
optional = true

# Engine
[dependencies.bevy]
version = "0.8"
default-features = false
features = [
  "bevy_render",        # Rendering framework core
  "bevy_text",          # Text/font rendering
  "bevy_ui",            # UI toolkit
]
