[package]
name = "memory"
version = "0.1.0"
authors = ["Shaik Azhar Madar <azarmadr@pm.me>"]
edition = "2021"

[features]
default = []
dev = ["bevy-inspector-egui", "menu-plugin/dev"]

[dependencies]
serde = "1.0"
rand = "0.8"
duplicate = "0.4"
bevy_tweening = "0.6.0"
menu-plugin = { git = "https://github.com/azarmadr/bevy-ui-menu-plugin.git" }
bevy = { workspace = true }
autodefault = { workspace = true }
enum_dispatch = { workspace = true }

[dependencies.bevy-inspector-egui]
version = "0.15"
optional = true
