[package]
name = "menu-plugin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
debug = ["bevy-inspector-egui"]

[dependencies]
autodefault = "2.0.0"
enum_dispatch = "0.3"
duplicate = "0.4"

[dependencies.bevy-inspector-egui]
version = "0.10"
optional = true


[dependencies.bevy]
version = "0.7"
default-features = false
features = [
  #"render",
  ## "render" actually just includes:
  ## (feel free to use just a subset of these, instead of "render")
  "bevy_render",        # Rendering framework core
  "bevy_sprite",        # 2D (sprites) rendering
  #"bevy_pbr",           # 3D (physically-based) rendering
  "bevy_core_pipeline", # Higher-level rendering abstractions
  #"bevy_gltf",          # GLTF 3D assets format support
  "bevy_text",          # Text/font rendering
  "bevy_ui",            # UI toolkit
  "bevy_winit",
  "png"
]

