[package]
name = "paper-plugin"
version = "0.1.0"
authors = ["Shaik Azhar Madar <azarmadr@pm.me>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
debug = ["colored", "bevy-inspector-egui"]

[dependencies]
serde = "1.0"
rand = "0.8"
autodefault = "2.0.0"
bevy_tweening = "0.3"

# Console Debug
[dependencies.colored]
version = "2.0"
optional = true

# Hierarchy inspector debug
[dependencies.bevy-inspector-egui]
version = "0.8"
optional = true

# Engine
[dependencies.bevy]
version = "0.6"
default-features = false
features = ["render"]

# Dependencies for WASM only
[target.'cfg(target_arch = "wasm32")'.dependencies.getrandom]
version="0.2"
features=["js"]

